name:           reopt-vcg
version:        0.1.0.0
synopsis:       Generate verification conditions for equivalence between LLVM and x86.
description:    Generates verification conditions that are necessary to show an
                equivalence between the LLVM representation of a program and the x86 binary. The
                LLVM is recovered using macaw. The verification conditions are
                intended to be solved using SMT.
homepage:       https://github.com/GaloisInc/reopt-vcg/haskell-proto
author:         Guannan Wei and Joe Hendrix
maintainer:     Joe Hendrix <jhendrix@galois.com>
copyright:      2018 Galois, Inc
category:       binary analysis
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
Tested-With:    GHC == 8.4.3

extra-source-files:
    README.md

library
  hs-source-dirs:
      src
  build-depends:
                base >=4.7 && <5
              , scientific
              , text
              , unordered-containers
              , yaml >= 0.10.0
  exposed-modules:
    Reopt.VCG.Config
  default-language: Haskell2010

executable reopt-vcg
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                base >=4.7 && <5
              , ansi-wl-pprint
              , bytestring
              , containers
              , directory
              , elf-edit
              , filepath
              , lens
              , llvm-pretty
              , llvm-pretty-bc-parser
              , macaw-base
              , macaw-x86
              , mtl
              , parameterized-utils
              , process
              , text >=1.2.3.0
              , reopt-vcg
              , vector
              , what4
              , yaml >= 0.10.0
  other-modules:
      LLVMExamples
      VCGCommon
      VCGLLVM
      VCGMacaw
  default-language: Haskell2010

test-suite reopt-vcg-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , elf-edit
    , lens
    , llvm-pretty
    , llvm-pretty-bc-parser
    , macaw-base
    , macaw-x86
    , mtl
    , parameterized-utils
    , text >=1.2.3.0
    , reopt-vcg
    , vector
    , what4
    , yaml
  other-modules:
      Paths_reopt_vcg
  default-language: Haskell2010
